# Cordite-Asset-Lib

./: .gitignore  CMakeLists.txt  LICENSE  archive.cpp  file.cpp  locator.cpp  main.cpp
folder2sqlite/: CMakeLists.txt  main.cpp
include/: archive.h  cassetlib.h  file.h  filesession.h  locator.h  resource.h
include/real/: rarchive.h  rfilesession.h  rresource.h
include/sqlite/: sarchive.h  sfilesession.h  sresource.h
include/tar/: tarchive.h  tarparts.h  tfilesession.h  tresource.h
include/tarc/: tarparts.h  tcarchive.h  tcfilesession.h  tcresource.h
include/zlib/: zarchive.h
real/: rarchive.cpp  rfilesession.cpp  rresource.cpp
sqlite/: sarchive.cpp  sfilesession.cpp  sresource.cpp
tar/: tarchive.cpp  tfilesession.cpp  tresource.cpp
tarc/: tcarchive.cpp  tcfilesession.cpp  tcresource.cpp
tests/: test.sqlite  test.tar  test2.tar
tests/test1/: awesome.txt
tests/test1/anotherdir/: awesome.txt
tests/test2/: awesome.txt
zlib/: CMakeLists.txt  zarchive.cpp  zlib.h  zresource.cpp
